<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="c_label_dialog_title">信息</string>
    <string name="c_label_dialog_btn_ok">确定</string>
    <string name="c_empty" />
    <string name="c_label_dialog_btn_cancel">取消</string>
    <string name="c_msg_network_not_available">当前网络已断开连接</string>
    <string name="c_msg_http_request_fail">网络请求失败,请检查网络连接是否可用</string>
    <string name="c_msg_http_preparing">正在准备</string>
    <string name="c_msg_http_download_finish">下载完成</string>
    <string name="c_msg_http_download_start">开始下载</string>
    <string name="c_msg_http_downloading">正在下载</string>
    <string name="c_msg_http_request_error">网络请求错误</string>
    <string name="c_msg_http_illegal_data_format">不正确的数据格式，无法转换成 %s</string>
    <string name="c_msg_http_conn_timeout">请求超时</string>
    <string name="c_msg_n_start_download_update">开始下载更新</string>
    <string name="c_msg_n_download_update_error">下载更新时发生错误: %s</string>
    <string name="c_msg_n_download_finish">更新下载完成</string>
    <string name="app_name">U盾验证</string>
    <string name="title_name">U盾验证(%1$s)</string>
    <string name="switch_mode">切换连接方式</string>
    <string name="action_switch">切换至%1$s模式</string>
    <string name="action_start">开始连接</string>
    <string name="action_stop">停止连接</string>
    <string name="hello_world">Hello world!</string>
    <string name="empty" />
    <string name="main_button_label_modify_pwd">修改密码</string>
    <string name="main_button_label_verify_pwd">校验密码</string>
    <string name="main_button_label_device_info">设备信息</string>
    <string name="main_button_label_sg_signature">二代签名</string>
    <string name="ESKERROR_NOT_INIT">驱动库没有初始化</string>
    <string name="ESKERROR_DEV_UNSUPPORT">不支持的设备</string>
    <string name="ESKERROR_VERSION">设备版本不支持</string>
    <string name="ESKERROR_APUDSW_BASE">设备的返回APDU状态码错误</string>
    <string name="ESKERROR_ALG_UNSUPPORT">不支持的算法</string>
    <string name="ESKERROR_PARAM">参数错误</string>
    <string name="ESKERROR_NO_DEVICE">没有插入设备</string>
    <string name="ESKERROR_DATA_LENGTH">数据长度错误</string>
    <string name="ESKERROR_KEY_LENGTH">Key长度错误</string>
    <string name="ESKERROR_BUFFER_TOO_SMALL">Buffer大小不足</string>
    <string name="ESKERROR_FAILED">失败（没指明具体错误类型）</string>
    <string name="ESKERROR_CANCEL">命令取消</string>
    <string name="ESKERROR_PIN_LEN">PIN长度错误</string>
    <string name="ESKERROR_DECRYPTE_FAILED">密钥解密失败</string>
    <string name="ESKERROR_SIGNVERIFY_FAILED">签名验签失败</string>
    <string name="ESKERROR_DEVICE_CONFIGING">设备配置失败</string>
    <string name="ESKERROR_DEVICETYPE">设备类型错误</string>
    <string name="ESKERROR_COMMUTICATION_INIT">通讯初始化失败</string>
    <string name="ESKERROR_COMMUTICATION">通讯错误</string>
    <string name="ESKERROR_CERT_WRITE">写入证书失败</string>
    <string name="ESKERROR_CERT_ENUM_END">证书枚举完毕</string>
    <string name="ESKERROR_DEVICE_RESET">设备复位失败</string>
    <string name="ESKERROR_CERT_READ">读取证书失败</string>
    <string name="ESKERROR_COS_PINLOCK">密码已经被锁定</string>
    <string name="ESKERROR_COS_CANCEL">操作被取消</string>
    <string name="main_label_conn_state">连接状态</string>
    <string name="main_label_not_connected">未连接</string>
    <string name="main_label_pwd_mgr">密码管理</string>
    <string name="main_label_modify_pwd">修改密码</string>
    <string name="main_label_cert_mgr">证书管理</string>
    <string name="main_label_view_cert">查看证书</string>
    <string name="main_label_sign">签名</string>
    <string name="main_label_sign_hash">一代签名</string>
    <string name="main_label_sign_message">二代签名</string>
    <string name="btn_label_back">返回</string>
</resources>
