<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:paddingTop="12.0dip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_label_conn_state" />
            <Button
                android:textColor="#ff000000"
                android:id="@+id/main_btn_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.0dip"
                android:layout_marginBottom="16.0dip"
                android:text="@string/switch_mode"
                style="@style/main_btn_item" />
            <Button
                android:enabled="false"
                android:textColor="@drawable/main_btn_item_greencolor_selector"
                android:id="@+id/main_btn_conn_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.0dip"
                android:layout_marginBottom="16.0dip"
                android:text="@string/main_label_not_connected"
                style="@style/main_btn_item" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_label_sign" />
            <Button android:enabled="false"
                android:id="@+id/main_btn_signature_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.0dip"
                android:layout_marginBottom="16.0dip"
                android:text="@string/main_label_sign_hash"
                style="@style/main_btn_item" />
            <Button android:enabled="false"
                android:id="@+id/main_btn_signature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.0dip"
                android:layout_marginBottom="16.0dip"
                android:text="@string/main_label_sign_message"
                style="@style/main_btn_item" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

    <!--
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/main_label_pwd_mgr" />
               <Button
                   android:enabled="false"
                   android:id="@+id/main_btn_modify_pwd"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="6.0dip"
                   android:layout_marginBottom="16.0dip"
                   android:text="@string/main_label_modify_pwd"
                   style="@style/main_btn_item" />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/main_label_cert_mgr" />
               <Button android:enabled="false"
                   android:id="@+id/main_btn_view_cert"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="6.0dip"
                   android:layout_marginBottom="16.0dip"
                   android:text="@string/main_label_view_cert"
                   style="@style/main_btn_item" />
                   -->
